AC_INIT(diamondx, 0.1, diamondx@multimedia.cx)
AC_CONFIG_SRCDIR(npshell.c)
AM_INIT_AUTOMAKE(diamondx, 0.1)
AC_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

# don't want static libraries
AC_DISABLE_STATIC

AC_PROG_LIBTOOL

AC_CONFIG_FILES([
	Makefile
	doc/Makefile
	test/Makefile
])

AC_OUTPUT
